--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_chat_bubble: ^2.0.0
+  cool_alert: ^1.1.0
+  rflutter_alert: ^2.0.4
 
 dev_dependencies:
   flutter_test:
