--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
     - assets/images/elsa.jpeg
     - assets/images/abdullah.jpeg
     - assets/images/setiawan.jpeg
+    - assets/images/bmw.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
