--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_chat_bubble: ^2.0.0
   cool_alert: ^1.1.0
   rflutter_alert: ^2.0.4
+  qrscan: ^0.3.2
 
 dev_dependencies:
   flutter_test:
