--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
     - assets/images/abdullah.jpeg
     - assets/images/setiawan.jpeg
     - assets/images/bmw.png
+    - assets/images/berhasil.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
