--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+     <meta-data android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyDB0iqVgGWz0w06EaeqNvm3UZ2hUJho9Bs"/>
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
