--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cool_alert: ^1.1.0
   rflutter_alert: ^2.0.4
   qrscan: ^0.3.2
+  google_maps_flutter: ^2.1.6
 
 dev_dependencies:
   flutter_test:
