--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_application_1">
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
    <application
         android:label="flutter_application_1"
         android:name="${applicationName}"
@@ -27,10 +29,10 @@
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
-     <meta-data android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyDB0iqVgGWz0w06EaeqNvm3UZ2hUJho9Bs"/>
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDB0iqVgGWz0w06EaeqNvm3UZ2hUJho9Bs"/>
     </application>
 </manifest>
