--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   geocoding: 2.0.4
   flutter: 
     sdk: flutter
+  
+  firebase_core: ^1.17.1
+  firebase_auth: ^3.3.19
 
 dev_dependencies: 
   flutter_lints: ^1.0.0
