--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
+  google_fonts: ^3.0.1
 
 dev_dependencies: 
   flutter_lints: ^1.0.0
