--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
   google_fonts: ^3.0.1
+  cloud_firestore: ^3.1.18
+  cloud_firestore_web: ^2.6.17
 
 dev_dependencies: 
   flutter_lints: ^1.0.0
@@ -45,4 +47,3 @@ flutter:
   fonts: 
     - family: Montserrat
   uses-material-design: true
-
