--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.android.material:material:1.6.0'
+
 }
