--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   google_fonts: ^3.0.1
   cloud_firestore: ^3.1.18
   cloud_firestore_web: ^2.6.17
+  flutter_launcher_icons: ^0.9.3
 
 dev_dependencies: 
   flutter_lints: ^1.0.0
@@ -44,6 +45,12 @@ flutter:
     - assets/images/gagal.png
     - assets/images/virtualaccount.png
     - assets/images/wallet.png
+
+flutter_icons:
+  android: true
+  ios: false 
+  image_path: "assets/images/caspercar.png"
+
   fonts: 
     - family: Montserrat
   uses-material-design: true
